--- a/lib/presentation/core/localization/en.json
+++ b/lib/presentation/core/localization/en.json
@@ -428,5 +428,7 @@
   "study_modes_grammarPoints_ext": "文法点",
   "settings_general_badge_words": "Show words as badges",
   "settings_general_badge_words_description": "Whether to show words in lists as badges or as list items.",
-  "archive_title": "Archive"
+  "archive_title": "Archive",
+  "daily_max_words_limit": "Maximum words per day",
+  "daily_max_grammar_limit": "Maximum grammar points per day"
 }
