Added OpenAI integration on Listening Tests

--- a/lib/presentation/core/localization/en.json
+++ b/lib/presentation/core/localization/en.json
@@ -150,8 +150,8 @@
   "settings_general_graphs": "Change data display mode",
   "settings_tutorial_label": "Show tutorial",
   "settings_general_versionNotes": "Version Notes",
-  "settings_account_section": "Manage Account & Back Up",
-  "settings_account_label": "Account",
+  "settings_account_section": "Account",
+  "settings_account_label": "Account Settings",
   "settings_information_section": "Information",
   "settings_information_contribute": "KanPractice Development Status on GitHub",
   "settings_information_rating": "Rate the app!",
