--- a/lib/presentation/core/localization/es.json
+++ b/lib/presentation/core/localization/es.json
@@ -150,8 +150,8 @@
   "settings_general_graphs": "Cambiar modo de visualización de datos",
   "settings_tutorial_label": "Mostrar tutorial",
   "settings_general_versionNotes": "Notas de Versión",
-  "settings_account_section": "Gestionar Cuenta y Copia de Seguridad",
-  "settings_account_label": "Cuenta",
+  "settings_account_section": "Cuenta",
+  "settings_account_label": "Ajustes de Cuenta",
   "settings_information_section": "Información",
   "settings_information_contribute": "Estado de Desarrollo de KanPractice en GitHub",
   "settings_information_rating": "¡Valora la aplicación!",
@@ -385,7 +385,7 @@
   "back_canvas": "Atrás",
   "settings_enhancements_label": "Mejoras",
   "pending_review": "Pendiente de revisión diaria",
-  "can_take_a_while_loading": "Pude tardar un poco, no cierres esta página.",
+  "can_take_a_while_loading": "Puede tardar un poco, no cierres esta página.",
   "settings_daily_test_options": "Opciones de Test Diarios",
   "settings_daily_notification_title": "Mostrar noticiatión de test",
   "settings_daily_notification_sub": "Si está activo, cuando tengas palabras que revisar para ese modo de estudio, el aviso del test diario aparecerá en la pantalla de inicio.",
