--- a/lib/presentation/core/localization/es.json
+++ b/lib/presentation/core/localization/es.json
@@ -430,5 +430,6 @@
   "settings_general_badge_words_description": "Si está activo, se mostrarán las palabras de las listas como medallas, si no, se mostrarán como elementos de una lista.",
   "archive_title": "Archivo",
   "daily_max_words_limit": "Máximo de palabras al día",
-  "daily_max_grammar_limit": "Máximo de puntos gramaticales al día"
+  "daily_max_grammar_limit": "Máximo de puntos gramaticales al día",
+  "listening_example": "Contexto:"
 }
