--- a/lib/presentation/core/localization/de.json
+++ b/lib/presentation/core/localization/de.json
@@ -121,7 +121,7 @@
   "word_lists_createDialogForAddingKanList_header": "KanListen Name",
   "word_lists_createDialogForAddingKanList_hint": "Name",
   "word_lists_createDialogForAddingKanList_positive": "Erstellen",
-  "google_play_link": "https://play.google.com/store/apps/details?id=com.gabr.garc.kanpractice&hl=en&gl=US",
+  "google_play_link": "https://play.google.com/store/apps/details?id=com.gabr.garc.kanpracticepro&hl=en&gl=US",
   "word_lists_versionDialog_button_label": "Playstore besuchen",
   "word_lists_versionDialog_title": "Neue Version verfügbar",
   "word_lists_versionDialog_notes": "Anmerkungen zur Version:",
