--- a/lib/presentation/core/localization/en.json
+++ b/lib/presentation/core/localization/en.json
@@ -121,7 +121,7 @@
   "word_lists_createDialogForAddingKanList_header": "KanList Name",
   "word_lists_createDialogForAddingKanList_hint": "Name",
   "word_lists_createDialogForAddingKanList_positive": "Create",
-  "google_play_link": "https://play.google.com/store/apps/details?id=com.gabr.garc.kanpractice&hl=en&gl=US",
+  "google_play_link": "https://play.google.com/store/apps/details?id=com.gabr.garc.kanpracticepro&hl=en&gl=US",
   "word_lists_versionDialog_button_label": "Go to store",
   "word_lists_versionDialog_title": "New version available",
   "word_lists_versionDialog_notes": "Version Notes:",
