--- a/lib/presentation/core/localization/es.json
+++ b/lib/presentation/core/localization/es.json
@@ -121,7 +121,7 @@
   "word_lists_createDialogForAddingKanList_header": "KanList Nombre",
   "word_lists_createDialogForAddingKanList_hint": "Nombre",
   "word_lists_createDialogForAddingKanList_positive": "Crear",
-  "google_play_link": "https://play.google.com/store/apps/details?id=com.gabr.garc.kanpractice&hl=es&gl=US",
+  "google_play_link": "https://play.google.com/store/apps/details?id=com.gabr.garc.kanpracticepro&hl=es&gl=US",
   "word_lists_versionDialog_button_label": "Ir a la tienda",
   "word_lists_versionDialog_title": "Nueva versión disponible",
   "word_lists_versionDialog_notes": "Notas de Versión:",
