--- a/lib/presentation/core/localization/en.json
+++ b/lib/presentation/core/localization/en.json
@@ -431,5 +431,5 @@
   "archive_title": "Archive",
   "daily_max_words_limit": "Maximum words per day",
   "daily_max_grammar_limit": "Maximum grammar points per day",
-  "listening_example": "Context:"
+  "provide_context": "Context"
 }
