--- a/lib/presentation/core/localization/de.json
+++ b/lib/presentation/core/localization/de.json
@@ -431,5 +431,12 @@
   "archive_title": "Archiv",
   "daily_max_words_limit": "Maximale Wörter pro Tag",
   "daily_max_grammar_limit": "Maximale Grammatikpunkte pro Tag",
-  "provide_context": "Context"
+  "provide_context": "Context",
+  "test_mode_translation": "Übersetzungstest",
+  "abbr_test_mode_translation": "Übersetzung",
+  "translation_bottom_sheet_content": "Es werden zufällige japanische Sätze mit Ihrem Vokabular generiert, um Ihr Verständnis zu trainieren. Machen wir den Übersetzungstest!",
+  "translation_bottom_sheet_title": "Machen Sie einen Übersetzungstest",
+  "translation_bottom_sheet_label": "Übersetzung",
+  "translation_bottom_sheet_begin_ext": "始める",
+  "translation_bottom_sheet_begin": "Beginn"
 }
