--- a/lib/presentation/core/localization/es.json
+++ b/lib/presentation/core/localization/es.json
@@ -431,5 +431,12 @@
   "archive_title": "Archivo",
   "daily_max_words_limit": "Máximo de palabras al día",
   "daily_max_grammar_limit": "Máximo de puntos gramaticales al día",
-  "provide_context": "Contexto"
+  "provide_context": "Contexto",
+  "test_mode_translation": "Test de Traducción",
+  "abbr_test_mode_translation": "Traducción",
+  "translation_bottom_sheet_content": "frases japonesas aleatorias serán generadas utilizando tu vocabulario para entrenar tu comprensión. ¡Hagamos la prueba de traducción!",
+  "translation_bottom_sheet_title": "Hacer un test de traducción",
+  "translation_bottom_sheet_label": "Traducción",
+  "translation_bottom_sheet_begin_ext": "始める",
+  "translation_bottom_sheet_begin": "Empezar"
 }
