--- a/lib/presentation/core/localization/en.json
+++ b/lib/presentation/core/localization/en.json
@@ -438,5 +438,6 @@
   "translation_bottom_sheet_title": "Make a translation test",
   "translation_bottom_sheet_label": "Translations",
   "translation_bottom_sheet_begin_ext": "始める",
-  "translation_bottom_sheet_begin": "Begin"
+  "translation_bottom_sheet_begin": "Begin",
+  "translation_loading": "Loading translation..."
 }
