--- a/lib/presentation/core/localization/es.json
+++ b/lib/presentation/core/localization/es.json
@@ -438,5 +438,6 @@
   "translation_bottom_sheet_title": "Hacer un test de traducción",
   "translation_bottom_sheet_label": "Traducción",
   "translation_bottom_sheet_begin_ext": "始める",
-  "translation_bottom_sheet_begin": "Empezar"
+  "translation_bottom_sheet_begin": "Empezar",
+  "translation_loading": "Cargando traducción..."
 }
