--- a/lib/presentation/core/localization/en.json
+++ b/lib/presentation/core/localization/en.json
@@ -439,5 +439,7 @@
   "translation_bottom_sheet_label": "Translations",
   "translation_bottom_sheet_begin_ext": "始める",
   "translation_bottom_sheet_begin": "Begin",
-  "translation_loading": "Loading translation..."
+  "translation_loading": "Loading translation...",
+  "translation_test_loading": "Generating random sentence...",
+  "translation_test_disclaimer": "In order to perform this test, an stable internet connection is required"
 }
