--- a/lib/presentation/core/localization/es.json
+++ b/lib/presentation/core/localization/es.json
@@ -439,5 +439,7 @@
   "translation_bottom_sheet_label": "Traducción",
   "translation_bottom_sheet_begin_ext": "始める",
   "translation_bottom_sheet_begin": "Empezar",
-  "translation_loading": "Cargando traducción..."
+  "translation_loading": "Cargando traducción...",
+  "translation_test_loading": "Generando frase aleatoria...",
+  "translation_test_disclaimer": "Para realizar este test se requiere una conexión estable a internet"
 }
