--- a/lib/presentation/core/localization/en.json
+++ b/lib/presentation/core/localization/en.json
@@ -150,8 +150,8 @@
   "settings_general_graphs": "Change data display mode",
   "settings_tutorial_label": "Show tutorial",
   "settings_general_versionNotes": "Version Notes",
-  "settings_account_section": "Manage Account & Back Up",
-  "settings_account_label": "Account",
+  "settings_account_section": "Account",
+  "settings_account_label": "Account Settings",
   "settings_information_section": "Information",
   "settings_information_contribute": "KanPractice Development Status on GitHub",
   "settings_information_rating": "Rate the app!",
@@ -430,5 +430,16 @@
   "settings_general_badge_words_description": "Whether to show words in lists as badges or as list items.",
   "archive_title": "Archive",
   "daily_max_words_limit": "Maximum words per day",
-  "daily_max_grammar_limit": "Maximum grammar points per day"
+  "daily_max_grammar_limit": "Maximum grammar points per day",
+  "provide_context": "Context",
+  "test_mode_translation": "Translation Test",
+  "abbr_test_mode_translation": "Translation",
+  "translation_bottom_sheet_content": "random japanese sentences will be created using your vocabulary to train your comprehension. Let's take the translation test!",
+  "translation_bottom_sheet_title": "Make a translation test",
+  "translation_bottom_sheet_label": "Translations",
+  "translation_bottom_sheet_begin_ext": "始める",
+  "translation_bottom_sheet_begin": "Begin",
+  "translation_loading": "Loading translation...",
+  "translation_test_loading": "Generating random sentence...",
+  "translation_test_disclaimer": "In order to perform this test, an stable internet connection is required"
 }
