--- a/lib/presentation/core/localization/es.json
+++ b/lib/presentation/core/localization/es.json
@@ -150,8 +150,8 @@
   "settings_general_graphs": "Cambiar modo de visualización de datos",
   "settings_tutorial_label": "Mostrar tutorial",
   "settings_general_versionNotes": "Notas de Versión",
-  "settings_account_section": "Gestionar Cuenta y Copia de Seguridad",
-  "settings_account_label": "Cuenta",
+  "settings_account_section": "Cuenta",
+  "settings_account_label": "Ajustes de Cuenta",
   "settings_information_section": "Información",
   "settings_information_contribute": "Estado de Desarrollo de KanPractice en GitHub",
   "settings_information_rating": "¡Valora la aplicación!",
@@ -385,7 +385,7 @@
   "back_canvas": "Atrás",
   "settings_enhancements_label": "Mejoras",
   "pending_review": "Pendiente de revisión diaria",
-  "can_take_a_while_loading": "Pude tardar un poco, no cierres esta página.",
+  "can_take_a_while_loading": "Puede tardar un poco, no cierres esta página.",
   "settings_daily_test_options": "Opciones de Test Diarios",
   "settings_daily_notification_title": "Mostrar noticiatión de test",
   "settings_daily_notification_sub": "Si está activo, cuando tengas palabras que revisar para ese modo de estudio, el aviso del test diario aparecerá en la pantalla de inicio.",
@@ -430,5 +430,16 @@
   "settings_general_badge_words_description": "Si está activo, se mostrarán las palabras de las listas como medallas, si no, se mostrarán como elementos de una lista.",
   "archive_title": "Archivo",
   "daily_max_words_limit": "Máximo de palabras al día",
-  "daily_max_grammar_limit": "Máximo de puntos gramaticales al día"
+  "daily_max_grammar_limit": "Máximo de puntos gramaticales al día",
+  "provide_context": "Contexto",
+  "test_mode_translation": "Test de Traducción",
+  "abbr_test_mode_translation": "Traducción",
+  "translation_bottom_sheet_content": "frases japonesas aleatorias serán generadas utilizando tu vocabulario para entrenar tu comprensión. ¡Hagamos la prueba de traducción!",
+  "translation_bottom_sheet_title": "Hacer un test de traducción",
+  "translation_bottom_sheet_label": "Traducción",
+  "translation_bottom_sheet_begin_ext": "始める",
+  "translation_bottom_sheet_begin": "Empezar",
+  "translation_loading": "Cargando traducción...",
+  "translation_test_loading": "Generando frase aleatoria...",
+  "translation_test_disclaimer": "Para realizar este test se requiere una conexión estable a internet"
 }
