--- a/lib/presentation/core/localization/de.json
+++ b/lib/presentation/core/localization/de.json
@@ -441,5 +441,6 @@
   "translation_bottom_sheet_begin": "Beginn",
   "translation_loading": "Übersetzung laden...",
   "translation_test_loading": "Generierung eines zufälligen Satzes...",
-  "translation_test_disclaimer": "Um diesen Test durchzuführen, ist eine stabile Internetverbindung erforderlich"
+  "translation_test_disclaimer": "Um diesen Test durchzuführen, ist eine stabile Internetverbindung erforderlich",
+  "translation_words_used": "Verwendete Wörter"
 }
