--- a/lib/presentation/core/localization/en.json
+++ b/lib/presentation/core/localization/en.json
@@ -442,5 +442,7 @@
   "translation_loading": "Loading translation...",
   "translation_test_loading": "Generating random sentence...",
   "translation_test_disclaimer": "In order to perform this test, an stable internet connection is required",
-  "translation_words_used": "Words used"
+  "translation_words_used": "Words used",
+  "translation_disclaimer_title": "Using ChatGPT and Google ML Kit",
+  "translation_disclaimer": "While using ChatGPT for sentence generation and Google's Machine Learning Kit for translations, some random sentences and their translations will be prone to error as the parameters may be too differenciative to link them together in such a way that the sentence makes sense."
 }
