--- a/lib/presentation/core/localization/es.json
+++ b/lib/presentation/core/localization/es.json
@@ -442,5 +442,7 @@
   "translation_loading": "Cargando traducción...",
   "translation_test_loading": "Generando frase aleatoria...",
   "translation_test_disclaimer": "Para realizar este test se requiere una conexión estable a internet",
-  "translation_words_used": "Palabras usadas"
+  "translation_words_used": "Palabras usadas",
+  "translation_disclaimer_title": "Uso de ChatGPT y Google ML Kit",
+  "translation_disclaimer": "Al utilizar ChatGPT para la generación de frases y el Kit de Aprendizaje Automático de Google para las traducciones, algunas frases aleatorias y sus traducciones serán propensas a errores, ya que los parámetros pueden ser demasiado diferenciales como para unirlos de forma que la frase tenga sentido."
 }
