--- a/lib/presentation/core/localization/de.json
+++ b/lib/presentation/core/localization/de.json
@@ -444,5 +444,10 @@
   "translation_test_disclaimer": "Um diesen Test durchzuführen, ist eine stabile Internetverbindung erforderlich",
   "translation_words_used": "Verwendete Wörter",
   "translation_disclaimer_title": "Verwendung von ChatGPT und Google ML Kit",
-  "translation_disclaimer": "Bei der Verwendung von ChatGPT für die Satzgenerierung und Googles Machine Learning Kit für die Übersetzungen werden einige zufällige Sätze und ihre Übersetzungen fehleranfällig sein, da die Parameter zu unterschiedlich sein können, um sie so miteinander zu verknüpfen, dass der Satz einen Sinn ergibt."
+  "translation_disclaimer": "Bei der Verwendung von ChatGPT für die Satzgenerierung und Googles Machine Learning Kit für die Übersetzungen werden einige zufällige Sätze und ihre Übersetzungen fehleranfällig sein, da die Parameter zu unterschiedlich sein können, um sie so miteinander zu verknüpfen, dass der Satz einen Sinn ergibt.",
+  "ocr_camera": "Kamera",
+  "ocr_gallery": "Galerie",
+  "ocr_permissions_denied": "Sollte Berechtigungen für Einstellungen gewähren",
+  "ocr_picker_title": "Nehmen oder wählen Sie ein Bild...",
+  "ocr_scanned": "Gescanntes Bild"
 }
