Fixed arch and enlightened it

--- a/lib/presentation/core/localization/de.json
+++ b/lib/presentation/core/localization/de.json
@@ -448,8 +448,8 @@
   "ocr_camera": "Kamera",
   "ocr_gallery": "Galerie",
   "ocr_permissions_denied": "Sollte Berechtigungen für Einstellungen gewähren",
-  "ocr_picker_title": "Nehmen oder wählen Sie ein Bild...",
-  "ocr_scanned": "Gescanntes Bild",
+  "ocr_scanner": "Gescanntes",
+  "ocr_scanner_explain": "Nehmen Sie ein Bild auf oder wählen Sie es aus, um die japanischen Schriftzeichen darin zu erkennen. Die OCR wird mit Google Machine Learning Kit angewendet, ebenso wie die Übersetzungen des Textes, so dass einige Fehler auftreten können.",
   "ocr_translate": "Übersetzen",
   "ocr_show_original": "Original anzeigen",
   "ocr_select_text_info": "Text auswählbar für Übersetzung oder Suche in Jisho",
