--- a/lib/presentation/core/localization/en.json
+++ b/lib/presentation/core/localization/en.json
@@ -448,8 +448,8 @@
   "ocr_camera": "Camera",
   "ocr_gallery": "Gallery",
   "ocr_permissions_denied": "Should grant permissions on Settings",
-  "ocr_picker_title": "Take or pick an image...",
-  "ocr_scanned": "Scanned image",
+  "ocr_scanner": "Scanner",
+  "ocr_scanner_explain": "Take or select an image to recognize the japanese characters in it. OCR will be applied using Google Machine Learning Kit, as well as the translations on the text, so some errors could be produced.",
   "ocr_translate": "Translate",
   "ocr_show_original": "Show original",
   "ocr_select_text_info": "Selectable text for translation or search in Jisho",
