--- a/lib/presentation/core/localization/es.json
+++ b/lib/presentation/core/localization/es.json
@@ -448,8 +448,8 @@
   "ocr_camera": "Cámara",
   "ocr_gallery": "Galería",
   "ocr_permissions_denied": "Debes conceder permisos en Ajustes",
-  "ocr_picker_title": "Haz o elige una imagen...",
-  "ocr_scanned": "Imagen escaneada",
+  "ocr_scanner": "Escáner",
+  "ocr_scanner_explain": "Haz o selecciona una foto para reconocer los caracteres japoneses que contiene. El OCR se aplicará utilizando Google Machine Learning Kit, así como las traducciones sobre el texto, por lo que podrían producirse algunos errores",
   "ocr_translate": "Traducir",
   "ocr_show_original": "Mostrar original",
   "ocr_select_text_info": "Texto seleccionable para traducción o búsqueda en Jisho",
