--- a/lib/presentation/core/localization/en.json
+++ b/lib/presentation/core/localization/en.json
@@ -452,7 +452,8 @@
   "ocr_scanner_explain": "Take or select an image to recognize the japanese characters in it. OCR will be applied using Google Machine Learning Kit, as well as the translations on the text, so some errors could be produced.",
   "ocr_translate": "Translate",
   "ocr_show_original": "Show original",
-  "ocr_select_text_info": "Selectable text for translation or search in Jisho",
+  "ocr_select_text_info": "Editable and selectable text for corrections and translation or search in Jisho",
   "ocr_search_in_jisho_part1": "Search",
-  "ocr_search_in_jisho_part2": "in Jisho"
+  "ocr_search_in_jisho_part2": "in Jisho",
+  "ocr_reload_image": "Reload image"
 }
