--- a/lib/presentation/core/localization/es.json
+++ b/lib/presentation/core/localization/es.json
@@ -452,7 +452,8 @@
   "ocr_scanner_explain": "Haz o selecciona una foto para reconocer los caracteres japoneses que contiene. El OCR se aplicará utilizando Google Machine Learning Kit, así como las traducciones sobre el texto, por lo que podrían producirse algunos errores",
   "ocr_translate": "Traducir",
   "ocr_show_original": "Mostrar original",
-  "ocr_select_text_info": "Texto seleccionable para traducción o búsqueda en Jisho",
+  "ocr_select_text_info": "Texto editable y seleccionable para correcciones y traducción o búsqueda en Jisho",
   "ocr_search_in_jisho_part1": "Buscar",
-  "ocr_search_in_jisho_part2": "en Jisho"
+  "ocr_search_in_jisho_part2": "en Jisho",
+  "ocr_reload_image": "Recargar imagen"
 }
