--- a/lib/presentation/core/localization/es.json
+++ b/lib/presentation/core/localization/es.json
@@ -444,5 +444,16 @@
   "translation_test_disclaimer": "Para realizar este test se requiere una conexión estable a internet",
   "translation_words_used": "Palabras usadas",
   "translation_disclaimer_title": "Uso de ChatGPT y Google ML Kit",
-  "translation_disclaimer": "Al utilizar ChatGPT para la generación de frases y el Kit de Aprendizaje Automático de Google para las traducciones, algunas frases aleatorias y sus traducciones serán propensas a errores, ya que los parámetros pueden ser demasiado diferenciales como para unirlos de forma que la frase tenga sentido."
+  "translation_disclaimer": "Al utilizar ChatGPT para la generación de frases y el Kit de Aprendizaje Automático de Google para las traducciones, algunas frases aleatorias y sus traducciones serán propensas a errores, ya que los parámetros pueden ser demasiado diferenciales como para unirlos de forma que la frase tenga sentido.",
+  "ocr_camera": "Cámara",
+  "ocr_gallery": "Galería",
+  "ocr_permissions_denied": "Debes conceder permisos en Ajustes",
+  "ocr_scanner": "Escáner",
+  "ocr_scanner_explain": "Haz o selecciona una foto para reconocer los caracteres japoneses que contiene. El OCR se aplicará utilizando Google Machine Learning Kit, así como las traducciones sobre el texto, por lo que podrían producirse algunos errores",
+  "ocr_translate": "Traducir",
+  "ocr_show_original": "Mostrar original",
+  "ocr_select_text_info": "Texto editable y seleccionable para correcciones y traducción o búsqueda en Jisho",
+  "ocr_search_in_jisho_part1": "Buscar",
+  "ocr_search_in_jisho_part2": "en Jisho",
+  "ocr_reload_image": "Recargar imagen"
 }
